cmake_minimum_required (VERSION 3.8)

project ("libserialport" LANGUAGES C)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
list(APPEND src serialport.c; timing.c; libserialport_internal.h)
list(APPEND externlibs )
if (WIN32)
	if(MSVC)
	add_compile_definitions(LIBSERIALPORT_MSBUILD)
	endif()
list(APPEND src windows.c )
list(APPEND externlibs setupapi)
elseif(LINUX)
list(APPEND src linux.c linux_termios.c linux_termios.h )
elseif(BSD)
list(APPEND src freebsd.c )
elseif(APPLE)
list(APPEND src macosx.c )
endif()
message("libserial srcs :${src}")
add_library(${PROJECT_NAME} SHARED ${src})
target_link_libraries(${PROJECT_NAME} PUBLIC ${externlibs})

get_target_property(libs ${PROJECT_NAME} LINK_LIBRARIES)
message("libserial libs :${libs}")
